shelfmark/82-svc-shelfmark.yaml
apiVersion: v1
kind: Service
metadata:
  name: shelfmark
  namespace: calibre
spec:
  selector:
    app: shelfmark
  ports:
    - port: 80
      targetPort: 8084
      protocol: TCP
