shelfmark/92-ingress-shelfmark.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shelfmark
  namespace: calibre
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: shelfmark.white.fm
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shelfmark
                port:
                  number: 80
  tls:
    - hosts:
        - shelfmark.white.fm
      secretName: shelfmark-white-fm-tls
